етап реєстрації бд виглядає добре. таблиці створюються, тож переходимо далі